--- a/C#_OOP_HW014_WinForms_FuelCalc_r00.csproj
+++ b/C#_OOP_HW014_WinForms_FuelCalc_r00.csproj
@@ -55,6 +55,7 @@
     <Compile Include="FuelCalc2.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="FuelCost.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FuelCalc.resx">
